# plone.badisblocks

./: .copier-answers.yml  .copier-answers.zope-instance-instance.yml  .copier-answers.zope-setup.yml  .gitignore  CHANGELOG.md  README.md  TODO.md  claude.md  pyproject.toml  tasks.py
.github/workflows/: ci.yml
docs/: blocks-renderer-spec.md
src/plone/badisblocks/: __init__.py  configure.zcml  i18n.py  interfaces.py  permissions.zcml  setuphandlers.py  testing.py
src/plone/badisblocks/locales/: README.rst  plone.badisblocks.pot  update.py  update.sh
src/plone/badisblocks/locales/en/LC_MESSAGES/: plone.badisblocks.po
src/plone/badisblocks/profiles/default/: browserlayer.xml  metadata.xml  types.xml  viewlets.xml
src/plone/badisblocks/profiles/default/types/: Document.xml  Event.xml  News_Item.xml
src/plone/badisblocks/profiles/uninstall/: browserlayer.xml  viewlets.xml
src/plone/badisblocks/static/: badisblocks.css  badisblocks.js
src/plone/badisblocks/upgrades/: 1001.zcml  __init__.py  base.py  configure.zcml  v1001.py
src/plone/badisblocks/views/: __init__.py  accordion_block_view.pt  accordion_block_view.py  badisblocks_css.pt  badisblocks_js.pt  banner_block_view.pt  banner_block_view.py  base.py  blocks_view.pt  blocks_view.py  button_block_view.pt  button_block_view.py  carousel_block_view.pt  carousel_block_view.py  configure.zcml  default_block_view.pt  default_block_view.py  description_block_view.pt  description_block_view.py  event_block_view.pt  event_block_view.py  event_calendar_block_view.pt  event_calendar_block_view.py  grid_block_view.pt  grid_block_view.py  heading_block_view.pt  heading_block_view.py  html_block_view.pt  html_block_view.py  image_block_view.pt  image_block_view.py  introduction_block_view.pt  introduction_block_view.py  leadimage_block_view.pt  leadimage_block_view.py  listing_block_view.pt  listing_block_view.py  maps_block_view.pt  maps_block_view.py  search_block_view.pt  (+20 more)
tests/: conftest.py  test_block_serialization.py  test_blocks_rendering.py  test_default_view.py  test_setup.py  test_slate_serializer.py  test_upgrade_1001.py  test_view_accordion_block_view.py  test_view_banner_block_view.py  test_view_blocks_view.py  test_view_button_block_view.py  test_view_carousel_block_view.py  test_view_default_block_view.py  test_view_description_block_view.py  test_view_event_block_view.py  test_view_event_calendar_block_view.py  test_view_grid_block_view.py  test_view_heading_block_view.py  test_view_html_block_view.py  test_view_image_block_view.py  test_view_introduction_block_view.py  test_view_leadimage_block_view.py  test_view_listing_block_view.py  test_view_maps_block_view.py  test_view_search_block_view.py  test_view_separator_block_view.py  test_view_slate_block_view.py  test_view_slate_table_block_view.py  test_view_slider_block_view.py  test_view_teaser_block_view.py  test_view_title_block_view.py  test_view_toc_block_view.py  test_view_video_block_view.py
