[project]
name = "plone.badisblocks"
version = "1.0.0a1"
description = "Rendering blocks in Badis UI with Chameleon"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-2.0-or-later"}
authors = [
    {name = "Maik Derstappen", email = "md@derico.de"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Plone",
    "Framework :: Plone :: Addon",
    "Framework :: Plone :: 6.2",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["Plone", "CMS"]

dependencies = [
    "Plone>=6.2",
    "setuptools<81",
    "plone.classicui",
    "Paste",
    "plone.app.caching",
    "plone.app.upgrade",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-plone>=0.5.0",
    "plone.app.testing",
    "plone.testing",
]

[project.urls]
Homepage = "https://github.com/plone/plone.badisblocks"
Documentation = "https://github.com/plone/plone.badisblocks"
Repository = "https://github.com/plone/plone.badisblocks.git"
Issues = "https://github.com/plone/plone.badisblocks/issues"

[project.entry-points."z3c.autoinclude.plugin"]
target = "plone"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plone"]

[tool.plone.backend_addon.settings]
package_name = "plone.badisblocks"
package_title = "Plone Badisblocks"
package_description = "Rendering blocks in Badis UI with Chameleon"
package_folder = "plone/badisblocks"
plone_version = "6.2"
is_headless = false
author_name = "Maik Derstappen"
author_email = "md@derico.de"
zope_setup = true

[tool.plone.backend_addon.settings.subtemplates]
content_types = []
behaviors = []
services = []
views = ["blocks-view", "block-default", "block-title", "block-description", "block-slate", "block-image", "block-grid", "block-teaser", "block-listing", "block-introduction", "block-html", "block-slateTable", "block-toc"]


[tool.plone.project.settings]
plone_version = "6.2.0"
distribution = "plone.classicui"
db_storage = "instance"
base_path = "var"
instances = ["instance"]
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["plone.badisblocks"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "W",    # pycodestyle warnings
    "C90",  # mccabe complexity
    "B",    # bugbear
    "S",    # bandit (security)
    "UP",   # pyupgrade
    "SIM",  # simplify
    "PGH",  # pygrep-hooks
]
ignore = ["E731"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
# Locale update helper shells out to fixed translation tools (i18ndude/msginit).
"src/**/locales/update.py" = ["S603", "S607"]

[tool.ruff.lint.isort]
# Match the single-import-per-line, alphabetical layout the templates emit.
force-single-line = true
order-by-type = false
lines-after-imports = 2
known-first-party = ["plone"]

[tool.ruff.format]
preview = true

[tool.uv]
constraint-dependencies = ["Products.CMFPlone==6.2.0"]

[dependency-groups]
dev = ["invoke", "watchdog"]
